--- a/src/components/blog/styles.module.css
+++ b/src/components/blog/styles.module.css
@@ -7,7 +7,7 @@
   margin: auto;
   display: flex;
   flex-direction: row;
-  justify-content: flex-start;
+  justify-content: space-between;
   align-items: flex-start;
   font-size: 13px;
   gap: 1em;
@@ -262,6 +262,7 @@
   padding: 0.625em;
   align-items: center;
   padding-top: 1em;
+  width: 18%;
   
 }
 .hotStory h3 {
