--- a/src/components/blog/blogPost/styles.module.css
+++ b/src/components/blog/blogPost/styles.module.css
@@ -3,6 +3,7 @@
   display: flex;
   flex-direction: row;
   gap: 1em;
+  width: 20%;
   font-size: 13px;
 }
 .bgWhite {
@@ -13,7 +14,7 @@
   flex-direction: column;
   justify-content: flex-start;
   align-items: flex-start;
-  width: 90%;
+  width: 80%;
 }
 
 .aside > aside:first-of-type {
@@ -139,4 +140,13 @@
   overflow: visible;
   border-radius: 14px;
   background-color: white;
+}
+
+
+@media only screen and (max-width: 770px) {
+  .aside > aside:first-of-type {
+    width: 100%;
+    height: min-content;
+    display: none;
+  }
 }
