--- a/src/components/blog/blogPost/styles.module.css
+++ b/src/components/blog/blogPost/styles.module.css
@@ -65,8 +65,8 @@
 }
 .postHeroImg {
   width: 100%;
-  height: 0;
-  padding-bottom: 56.25%;
+  height: 60vh;
+  padding-bottom: 0 !important;
   object-fit: cover;
   position: relative;
 }
@@ -124,7 +124,7 @@
   display: flex;
   flex-direction: row;
   color: black;
-  margin-top: 2em;
+  margin-top: 1em;
   font-weight: 500;
 }
 
